[package]
name = "eshu-trace"
version = "0.1.0"
edition = "2021"
authors = ["Eshu Team <team@eshu-apps.com>"]
description = "Time Travel Debug - Binary search through package history to find breaking changes"
license = "MIT"
repository = "https://github.com/eshu-apps/eshu-trace"
readme = "README.md"

[[bin]]
name = "eshu-trace"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dialoguer = "0.11"
indicatif = "0.17"
regex = "1.10"
walkdir = "2.4"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
